
syntax = "proto3";

package hosting.testdata;

message TrimTest {
  string direct = 1;
  Message sub = 2;
  map<string, string> map = 3;
  repeated string list = 4;
  Message empty = 5;
  map<string, Message> mapsub = 6;
  oneof oneof1 {
    string oneof_direct1 = 7;
    Message oneof_sub1 = 8;
  }
  oneof oneof2 {
    string oneof_direct2 = 9;
    Message oneof_sub2 = 10;
  }
  repeated Message repeated_message = 11;

  enum Test {
    TEST_UNKNOWN = 0;
    TEST_FOO = 1;
  }
  Test enum = 12;
}

message Message {
  string child = 1;
  repeated string repeated_child = 2;
}
